# Pointnet

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  train.py
.github/workflows/: run_tests.yaml
config/: config.yaml  train.yaml
data/: chair.dvc
src/models/: pointnetplusplus.py
src/pipelines/: dataset.py
tests/: test.py
