[project]
name = "ai-project-template"
version = "3.0.0"
description = "The idea of this project(template) is to have a code framework prepared for any AI/ML/MLOps/LLMOps project"
authors = [{name = "Bojan Jakimovski - Shekswess", email = "jakimovski_bojan@outlook.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.31",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "mlflow>=2.22.1",
    "opensearch-py>=2.8.0",
    "pydantic>=2.11.5",
]

[tool.ruff]

# Exclude files and directories from being checked by Ruff.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black
line-length = 88
indent-width = 4

[tool.ruff.lint]

# Enable all rules by default.
select = ["I", "E", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]

# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.3",
    "ruff>=0.6.8",
    "ty>=0.0.1a8",
]
